src/test/ui/nll/closure-requirements/region-ebr-does-not-outlive-static.stderr
warning: not reporting region error due to -Znll
  --> $DIR/region-ebr-does-not-outlive-static.rs:21:5
   |
21 |     &*x
   |     ^^^

error: free region `'a` does not outlive free region `'static`
  --> $DIR/region-ebr-does-not-outlive-static.rs:21:5
   |
21 |     &*x
   |     ^^^

error: aborting due to previous error

